--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,27 @@
-cairocffi==1.1.0
-CairoSVG==2.4.2
+alembic==1.4.0
 certifi==2019.11.28
-cffi==1.13.2
 chardet==3.0.4
 Click==7.0
-cssselect2==0.2.2
 decorator==4.4.1
-defusedxml==0.6.0
 Flask==1.1.1
 Flask-Login==0.4.1
-Flask-MySQL==1.5.0
-Flask-MySQLdb==0.2.0
-Flask-WeasyPrint==0.6
-Flask-WTF==0.14.2
-html5lib==1.0.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.3
 idna==2.8
 infinity==1.4
 intervals==0.8.1
 itsdangerous==1.1.0
-Jinja2==2.10.3
+Jinja2==2.11.1
+Mako==1.1.1
 MarkupSafe==1.1.1
-MonthDelta==0.9.1
-mysqlclient==1.4.6
-numpy==1.18.1
-opencv-contrib-python==3.4.5.20
-pandas==0.25.3
-Pillow==7.0.0
-pkg-resources==0.0.0
-public==2019.4.13
-pycparser==2.19
-PyMySQL==0.9.3
-Pyphen==0.9.5
 python-dateutil==2.8.1
-pytz==2019.3
+python-editor==1.0.4
 requests==2.22.0
 six==1.14.0
-timedelta==2019.4.13
-tinycss2==1.0.2
-urllib3==1.25.7
-validators==0.14.1
-WeasyPrint==51
-webencodings==0.5.1
-Werkzeug==0.16.0
+SQLAlchemy==1.3.13
+urllib3==1.25.8
+validators==0.14.2
+Werkzeug==1.0.0
 WTForms==2.2.1
 WTForms-Components==0.10.4
